--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
     <head>
         <script defer src="./javascript.js"></script>
         <link rel="stylesheet" href="./style.css">
+        <meta name=”viewport” content=”width=device-width, initial-scale=1.0”/>
     </head>
     <body>
+        <div class="root">
             <h1>BlackJack</h1>
             <p id="message-el">Want to play a round?</p>
             <div class="cards-el-div">
@@ -27,5 +29,6 @@
                 <input id="username" type="text" name="username" placeholder="Enter your name here..."/>
                 <button id="startgame-btn" onclick="startGame()">START GAME</button>
             </div>
+        </div>
     </body>
 </html>
